@@ -3,11 +3,12 @@
 #include <errno.h>
 
 HMODULE __mingw_get_msvcrt_handle(void);
-int __cdecl _vcprintf_l (const char *f, _locale_t loc, va_list argp);
+int __cdecl _vcprintf_l (const char *, _locale_t, va_list);
+int __cdecl _vcprintf_s_l (const char *, _locale_t, va_list);
 static int __cdecl _int_vcprintf_s_l (const char *, _locale_t, va_list);
 static int __cdecl _stub (const char *, _locale_t, va_list);
 
-int __cdecl (*__MINGW_IMP_SYMBOL(_vcprintf_s_l))(const char *, va_list) = 
+int __cdecl (*__MINGW_IMP_SYMBOL(_vcprintf_s_l))(const char *, _locale_t, va_list) = 
  _stub;
 
 static int __cdecl
@@ -27,7 +28,7 @@ _stub (const char *s, _locale_t loc, va_list argp)
 }
 
 int __cdecl
-_vcprintf_s_l (const char *s, _local_t loc, va_list argp)
+_vcprintf_s_l (const char *s, _locale_t loc, va_list argp)
 {
   return _stub (s, loc, argp);
 }
